--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
             <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
             <url>file:${project.basedir}/lib</url>
         </repository>
+        <repository>
+        <id>netbeans</id>
+        <name>Netbeans rep</name>
+        <url>http://bits.netbeans.org/maven2/</url>
+    </repository>
     </repositories>
     <dependencies>
         <dependency>
