--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>unknown.binary</groupId>
+            <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
-            <version>SNAPSHOT</version>
+            <version>RELEASE124</version>
         </dependency>
     </dependencies>
     <properties>
